--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/ironhack-labs/cohort-tools-project#readme",
   "dependencies": {
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
+    "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
