--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "mocha": "^10.2.0",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
