--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/ironhack-labs/cohort-tools-project#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
