--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
