--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/ironhack-labs/cohort-tools-project#readme",
   "dependencies": {
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mocha": "^10.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
