--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +23,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
