--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
