--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mongoose": "^8.2.0"
+  },
+    "devDependencies": {
+    "nodemon": "^3.1.0"
+    }
   }
-}
+
