--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mocha": "^10.3.0",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
