--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/ironhack-labs/cohort-tools-project#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
