--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-openapi": "^12.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "swagger-jsdoc": "^6.2.8",
